<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainMenu"
    android:background="#20D6C7">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/main_title"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:paddingTop="40dp"
        android:id="@+id/main_title"
        android:textColor="#000"
        />

    <Button
        style="@style/Boutons"
        android:background="@drawable/boutonbleu"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:onClick="openPlayersView"
        android:text="@string/players"
         />

    <Button
        style="@style/Boutons"
        android:background="@drawable/boutonbleu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="openAnalyseTirsActivity"
        android:text="@string/analyse"
        />

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="#F00"
        android:layout_gravity="center_horizontal"
        >

        <View
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:background="#0F0"
            android:layout_gravity="center"/>

    </LinearLayout>

</LinearLayout>
