<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:background="#E3F2FD"
        tools:context="com.example.regnarddelagny.handball.ViewPager.ViewPagerActivity">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                style="@style/Boutons"
                android:background="@drawable/boutonbleu"
                android:text="@string/add_schema"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:elevation="4dp"
                android:id="@+id/bouton_ajout" />

            <Button
                style="@style/Boutons"
                android:background="@drawable/boutonbleu"
                android:text="@string/suppr_schema"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:elevation="4dp"
                android:id="@+id/bouton_suppr"/>

            <Button
                style="@style/Boutons"
                android:background="@drawable/boutonbleu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/fin_suppressions"
                android:layout_weight="1"
                android:elevation="4dp"
                android:id="@+id/bouton_back"
                android:visibility="gone"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/insert_point_at"
            android:orientation="vertical">

        </LinearLayout>

    </LinearLayout>
</ScrollView>